assets/css/main.css
:root {
    --color-active: #0d419e;
    --white: #ffffff;
    --black: #000304;
    --light: #f8f9fa;
    --secondary: #2b6bf9;
    --info: #ff4e8a;
    --success: #00a35d;
    --warning: #e2cb00;
    --danger: #f11800;
    --tirtiary:#2f448b;
    --quaternary:#144582;
}
.tmbg-quaternary
{
    background: var(--quaternary);
}
.tmbg-tertiary
{
    background: var(--tirtiary);
}
.tmbg-secondary
{
    background: var(--secondary);
}
.tmbg-danger
{
    background: var(--danger) !important;
}
.tmbg-success
{
    background: var(--success) !important;
}
.tmbg-primary {
    background: var(--color-active) !important;
}

.tmbg-warning {
    background: var(--warning) !important;
}

.tmtext-white {
    color: var(--white) !important;
}
.tmtext-success
{
    color: var(--success) !important;
}
.tmtext-dark {
    color: var(--black) !important;
}
.tmtext-danger{
    color: var(--danger) !important;
}
.tmtext-primary {
    color: var(--color-active) !important;
}
.tmtext-light{
    color:var(--light) !important;
}
html,
body {
    background-color: var(--white) !important;
    font-family: "DM Sans", sans-serif;
}

#sidenav::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
    opacity: .6;
}

#sidenav::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    background-color: #F5F5F5;
    opacity: .6;
}

#sidenav::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
    background-color: rgba(52, 71, 103, .6);
    opacity: .6;
}

@media (min-width: 990px)
{
.main-container {
    margin-left: 300px;
}
}
#sidenav {
    height: 100vh;
    position: fixed;
    background-color: var(--white) !important;
    box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
}

.sn-header {
    letter-spacing: -0.5px;
    line-height: 1.5;
}

.snav .nav-item a.nav-link span {
    font-family: "Inter", sans-serif;
    letter-spacing: 0.3px;
    color: var(--black);
    line-height: 1.5;
}

.snav .nav-item a.nav-link.active span {
    color: var(--white)
}

.snav .nav-item a.nav-link.active {
    background-color: var(--color-active);
}

.snav .nav-item a.nav-link:hover span,
.snav .nav-item a.nav-link:hover {
    color: var(--color-active) !important;
}

.snav .nav-item a.nav-link i {
    border-radius: 8px;
    /* background-color: var(--color-active); */
    /* color:var(--white) */
}

.snav .nav-item a.nav-link.active i {
    background-color: var(--white);
    color: var(--color-active);
    box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
}

.snav .nav-item a.nav-link:hover span,
.snav .nav-item a.nav-link:hover i {
    transition: all .3s ease;
}

.snav .sn-username {
    line-height: 1.5;
    letter-spacing: -0.5px;
    color: var(--black);
    transition: all .2s ease;
}

@media (max-width: 990px) {
    #sidenav {
        background-color: var(--white) !important;
        position: fixed;
        margin-left: -300px !important;
        z-index: 99;
        box-shadow: 0px 3.5px 5.5px 0px rgba(0, 0, 0, 0.02);
        height: 100vh;
        transition: .2s all ease;
    }

    .navbar-nav {
        width: 100vw;
    }
}

#sidenav.mobile {
    margin-left: 0px !important;
}
.navbar-nav
{
    position: relative;
    z-index: 1000;
}
.navbar-nav .nav-item a {
    background-color: transparent !important;
}
.nav-item
{
    z-index: 1000;
}

#burger.active {
    color: #000;
    opacity: 1;
}

.nav-link.dropdown-toggle::after {
    content: none;
}

.dropdown {
    position: static;
}

.dropdown .dropdown-menu {
    width: calc(100% - 1.5rem);
    right: .75rem;
    z-index: 1;
}

.dropdown .dropdown-list {
    padding: 0;
    border: none;
    overflow: hidden;
}

.dropdown .dropdown-list .dropdown-header {
    background-color: var(--color-active);
    border: 1px solid var(--color-active);
    padding-top: .75rem;
    padding-bottom: .75rem;
    color: #fff
}

.dropdown .dropdown-list .dropdown-item {
    white-space: normal;
    padding-top: .5rem;
    padding-bottom: .5rem;
    border-left: 1px solid #e3e6f0;
    border-right: 1px solid #e3e6f0;
    border-bottom: 1px solid #e3e6f0;
    line-height: 1.3rem
}

.dropdown .dropdown-list .dropdown-item .dropdown-list-image {
    position: relative;
    height: 2.5rem;
    width: 2.5rem
}

.dropdown .dropdown-list .dropdown-item .dropdown-list-image img {
    height: 2.5rem;
    width: 2.5rem
}

.dropdown .dropdown-list .dropdown-item .dropdown-list-image .status-indicator {
    background-color: #eaecf4;
    height: .75rem;
    width: .75rem;
    border-radius: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    border: .125rem solid #fff
}

.dropdown .dropdown-list .dropdown-item .text-truncate {
    max-width: 10rem
}

.dropdown .dropdown-list .dropdown-item:active {
    background-color: #eaecf4;
    color: #3a3b45
}

@media(min-width: 576px) {
    .dropdown {
        position: relative
    }

    .dropdown .dropdown-menu {
        width: auto;
        right: 0
    }

    .dropdown-list {
        width: 20rem !important
    }

    .dropdown-list .dropdown-item .text-truncate {
        max-width: 13.375rem
    }
}

.navbar-icons {
    height: 36px;
    width: 36px;
    text-align: center;
}

@media (min-width: 200px) {
    .animate {
        animation-duration: 0.3s;
        -webkit-animation-duration: 0.3s;
        animation-fill-mode: both;
        -webkit-animation-fill-mode: both;
    }
}

@keyframes slideIn {
    0% {
        transform: translateY(1rem);
        opacity: 0;
    }

    100% {
        transform: translateY(0rem);
        opacity: 1;
    }

    0% {
        transform: translateY(1rem);
        opacity: 0;
    }
}

@-webkit-keyframes slideIn {
    0% {
        -webkit-transform: transform;
        -webkit-opacity: 0;
    }

    100% {
        -webkit-transform: translateY(0);
        -webkit-opacity: 1;
    }

    0% {
        -webkit-transform: translateY(1rem);
        -webkit-opacity: 0;
    }
}

.slideIn {
    -webkit-animation-name: slideIn;
    animation-name: slideIn;
}
.tmbtn { 
    color: #ffffff; 
    background-color: #0D419E; 
    border-color: #2B6BF9; 
  } 
   
  .tmbtn:hover, 
  .tmbtn:focus, 
  .tmbtn:active, 
  .tmbtn.active, 
  .open .dropdown-toggle.tmbtn { 
    color: #ffffff; 
    background-color: #2B6BF9; 
    border-color: #2B6BF9; 
  } 
   
  .tmbtn:active, 
  .tmbtn.active, 
  .open .dropdown-toggle.tmbtn { 
    background-image: none; 
  } 
   
  .tmbtn.disabled, 
  .tmbtn[disabled], 
  fieldset[disabled] .tmbtn, 
  .tmbtn.disabled:hover, 
  .tmbtn[disabled]:hover, 
  fieldset[disabled] .tmbtn:hover, 
  .tmbtn.disabled:focus, 
  .tmbtn[disabled]:focus, 
  fieldset[disabled] .tmbtn:focus, 
  .tmbtn.disabled:active, 
  .tmbtn[disabled]:active, 
  fieldset[disabled] .tmbtn:active, 
  .tmbtn.disabled.active, 
  .tmbtn[disabled].active, 
  fieldset[disabled] .tmbtn.active { 
    background-color: #0D419E; 
    border-color: #2B6BF9; 
  } 
   
  .tmbtn .badge { 
    color: #0D419E; 
    background-color: #ffffff; 
  }
.navdrop-title
{
    font-weight: 400;
    color: var(--black);
    opacity: .7;
    letter-spacing: 0.5px;
}
.navdrop-content
{
    font-weight: 500;
    color: var(--black);
    opacity: .7;
    opacity: .9;
}
.dash_header
{
    letter-spacing: .1rem;
}
.dash_sub
{
    letter-spacing: -0.5px;
}
.mini-cal {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    font-family: Verdana, sans-serif;
    padding-bottom: 1.2em;
    color:var(--black)
}

#calTitle {
    display: flex;
    justify-content: space-between;
    -ms-align-items: center;
    align-items: center;
    font-size: 1.12em;
    text-align: center;
    padding: .4em 1em;
    padding-top: .8em
}

#calTitle button {
    outline: 0;
    display: block;
    border: .1em solid #ddd;
    border: none;
    padding: 0;
    width: 40px;
    height: 40px;
    line-height: 60px;
    border-radius: 50%;
    background-color: rgba(0, 0, 0, .1)
}

#calTitle button svg {
    width: 30px;
    height: 30px
}

#calTitle button:hover {
    background: rgba(255, 255, 255, .1)
}

#calTbody,
#calThead {
    display: flex;
    flex-wrap: wrap;
    padding: .1em
}

#calThead {
    color:var(--black);
    margin-top: .4em;
    align-items: center;
    text-align: center;
    font-size: .88em
}

#calTbody .a-date,
#calThead>div {
    box-sizing: border-box;
    flex: 1;
    min-width: calc(100% / 7);
    max-width: calc(100% / 7);
    width: calc(100% / 7);
    text-align: center;
    padding: 0
}

#calThead>div {
    font-size: 1.1em;
    padding: .2em .2em
}

#calTbody {
    color:var(--black);
}

#calTbody .a-date>span {
    display: block;
    font-size: 1em
}

#calTbody .a-date {
    cursor: default;
    padding: 0;
    position: relative;
    background-color: transparent;
    color: inherit;
    padding: 1em;
    border: .1em solid transparent;
    outline: 0;
    font-size: .9em
}

#calTbody .a-date.blurred {
    opacity: .5;
    pointer-events: none
}

#calTbody .a-date.event:before {
    content: '';
    position: absolute;
    top: .2em;
    right: 0;
    left: 0;
    margin: auto;
    background-color: var(--info);
    width: .3em;
    height: .3em;
    border-radius: 50%
}

#calTbody .a-date.current {
    border-color: var(--secondary);
    outline: 0;
    outline: 0;
    border-radius: 12px;
}

#calTbody .a-date.focused,
#calTbody .a-date:active {
    background: var(--color-active);
    color:var(--white);
    border-radius: 12px;
}

#calTbody .a-date.current.event.focused {
    background-color:var(--secondary);
    color: var(--white);
}

#calTFooter {
    display: flex;
    justify-content: space-between;
    -ms-align-items: center;
    align-items: center;
    font-size: 1.1em;
    padding: 0 1em;
    margin-top: .5em
}

#calTFooter #calLink {
    font-size: .8em;
    display: inline-block;
    padding: .6em .8em;
    flex-shrink: 0;
    text-decoration: none;
    color: var(--color-active);
    border-radius: 12px;
    color: var(--black);
}

#calTFooter #calLink:hover {
    background-color: var(--secondary);
    color: var(--white);
}

#calTFooter #eventTitle {
    margin: 0;
    margin-right: .1em;
    font-weight: 600;
    font-size: .95em;
    white-space: nowrap;
    overflow: hidden;
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis
}
.month-mover
{
    background-color: transparent !important;
    color: var(--color-active) !important;
}

